--- a/aula 17-imagem- de fundo/atividade-002.html
+++ b/aula 17-imagem- de fundo/atividade-002.html
@@ -31,6 +31,7 @@
         #q4{
             background-image: url("imagens/imagens/github-pp.png");
             background-repeat: repeat;
+            background-position: center;
             background-size: 30%;
         }
         #q5{
@@ -49,6 +50,61 @@
             background-image: url("imagens/imagens/github-pp.png");
             background-repeat: repeat-y;
             background-position: center;
+            background-size: 30%;
+        }
+        #f1{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-position: left top;
+            background-repeat: no-repeat;
+            background-size: 30%;
+
+        }
+        #f2{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-position: center top;
+            background-size: 30%;
+        }
+        #f3{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-size: 30%;
+            background-position: right top;
+        }
+        #f4{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-position:left center;
+            background-size: 30%;
+        }
+        #f5{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: 30%;
+        }
+        #f6{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-position: right center;
+            background-size: 30%;
+        }
+        #f7{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            background-size: 30%;
+        }
+        #f8{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-position: center bottom;
+            background-size: 30%;
+        }
+        #f9{
+            background-image: url("imagens/imagens/github-pp.png");
+            background-repeat: no-repeat;
+            background-position: right bottom;
             background-size: 30%;
         }
 
@@ -96,14 +152,39 @@
         divesas maneiras.</p>
         <h2>background-repeat</h2>
         <p>com essa prioridade  e possivel definir se uma imagem de fundo  ira se <strong>repetir</strong> quando o tamanho da caixa em que  em que estiver contida for maior do que o tamanho da im agem em si. por padrao ela sempre  vai ser repetida essa propiedade possui 4  valores</p>
-        <div id="q4"></div>
-        <div id="q5"></div>
-        <div id="q6"></div>
-        <div id="q7"></div>
+        
+            <div class="caixas">
+                <figure>
+                    <div  class="quadrado" id="q4"></div>
+                    <figcaption>repeat</figcaption>
+                </figure>
+                <figure>
+                    <div class="quadrado" id="q5"></div>
+                </figure>
+                <div class="quadrado" id="q6"></div>
+                <div class="quadrado" id="q7"></div>
+            </div>
 
         <h3>Background position</h3>
 
         <P>além de escolher o nivel  de recupetição do backgroud, tambem podemos mudar a posição de refencia de inicio das repetiçones.é considerado o conto esquerdo superior(left top), mas podemos ter varios opções.</P>
+        <div class="caixas">
+            <div class="quadrado" id="f1"></div>
+            <div class="quadrado" id="f2"></div>
+            <div class="quadrado" id="f3"></div>
+        </div>
+        <br>
+        <div class="caixas">
+            <div class="quadrado" id="f4"></div>
+            <div class="quadrado" id="f5"></div>
+            <div class="quadrado" id="f6"></div>
+        </div> 
+        <br>
+        <div class="caixas">
+            <div class="quadrado"  class="quadrado"id="f7"></div>
+            <div class="quadrado" id="f8"></div>
+            <div class="quadrado" id="f9"></div>
+        </div>
 
         <h4>Background-size</h4>
 
