--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Promeiros passos</p>
 
 <ul>
-    <li><a href="/aula03-caminhos/cursocss.html">Aula 03/a></li>
+    <li><a href="../html-css-tarde/aula03-caminhos/index.html">Aula 03/</li>
 </ul>
 </body>
 </html>
