--- a/index.html
+++ b/index.html
@@ -12,7 +12,60 @@
 <p>Promeiros passos</p>
 
 <ul>
-    <li><a href="../html-css-tarde/aula03-caminhos/index.html">Aula 03/</li>
+   <li>
+    <a href="../html-css-tarde/aula1-tags/index.html">Aula 01-tags</a>
+   </li>  
+
+   <li>
+    <a href="../html-css-tarde/aula2-estrutura-html/index.html">Aula2-estrutura</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula03-caminhos/index.html">aula03-caminhos</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula4-css/index.html">aula4-css</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula5-bg-color/index.html">Aula5-bg-color</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula6 -box-model/index.html">Aula6-box-model</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula7-botão/index.html">aula7-botão</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula 8 img/index.html">Aula 8-img</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula 9-emojis/05 - Caracteres, parágrafos e quebras de linha.pdf">Aula 9-emojis</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula10-titulos/07 - Hierarquia de títulos Samuel.pdf.pdf">aula10-titulos</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula11-fontes/index.html">aula11-fontes</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula12-midias/audio.html">aula12-midias</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula13seletores/index.html">aula13seletores</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula14 modelo de caixa/index.html">Aula14 modelo de caixa</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula15-desafio10-20240403T163744Z-001/">aula15-desafio10</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula 17-imagem- de fundo/fundo003.htm">Aula17-imagem-de fundo</a>
+   </li>
+   <li>
+    <a href="../html-css-tarde/aula19-tabelas/">aula19-tabelas</a>
+   </li>
 </ul>
+
+
 </body>
 </html>
