--- a/aula 20-form/atv1.html
+++ b/aula 20-form/atv1.html
@@ -26,10 +26,47 @@
             <legend>Formulario de inscrição</legend>
             <P>
                 <label for="">Nome completo</label><br>
-                <input type="text" name="" id="">
+                <input type="text" name="" id="" size="50px">
+                
+            </P>
+            <P>
+                <label for="">E-mail</label><br>
+                <input type="email" name="email" id="idemail" size="50px">
+            </P>
+            <p>
+                <label for="">Telefone</label><br>
+                <input type="tel" name="tel" id="idtel" size="50px">
+            </p>
+            <P>
+                <label for="">Data de nascimento</label><br>
+                <input type="date" name="date" id="iddate" size="50px">
             </P>
 
-            
+
+            <p>o que você quer aprender?</p>
+
+
+            <p>
+                <input type="radio" name="" id="idfront-end">
+                <label for="idFront-End">Front-End</label>
+            </p>
+            <P>
+                <input type="radio" name="data-science" id="iddata-science">
+                <label for="idData Science">Data Science</label>
+            </P>
+            <P>
+                <input type="radio" name="Mobile" id="idMobile">
+                <label for="idMobile">Mobile</label>
+            </P>
+            <p>
+                <input type="radio" name="" id="idinteligencia-Artificial">
+                <label for="idinteligência Artificial">idinteligência Artificial</label>
+            </p>
+
+
+            <p>Disponibilidade para assistir as aulas ao vivo</p>
+
+
         </fieldset>
 
        </div>
