--- a/aula 20-form/form003.html
+++ b/aula 20-form/form003.html
@@ -64,8 +64,11 @@
         </P>
 
         <P>
-        <input type="submit" value="Enviar">
+        <input type="date" name="date" id="iddate">
         </P>
+
+
+       
         
     </form>
 </body>
