--- a/aula 20-form/atv02.html
+++ b/aula 20-form/atv02.html
@@ -21,7 +21,7 @@
       <p>
           <label for="idnome">Nome</label>
           <br>
-           <input type="text" name="nome" bid="idnome">
+           <input type="text" name="nome" id="idnome">
       </p>
        <p>
            <label for="idmensagem">Mensagem</label><br>
